tests/miniJava/pos/000665_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) while ( 0 ) { } else if ( 0 ) { } else { } } }
