tests/miniJava/neg/003532_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( class java { public static void Main ( String [ ] java ) { { } } } ) { } else { } } }
